@@ -619,6 +619,9 @@ val code_segment_table: string list -> phrase
 (** Generate data for a predefined exception *)
 val predef_exception: int -> string -> phrase
 
+(** Generate data for a global string constant *)
+val emit_global_string_constant: string -> string -> phrase
+
 val plugin_header: (Cmx_format.unit_infos * Digest.t) list -> phrase
 
 (** Emit constant symbols *)
