@@ -590,6 +590,10 @@ let output_cds_file outfile =
        Bytesections.write_toc_and_trailer toc_writer;
     )
 
+let emit_global_constant outchan typ (name, value) =
+  let value = Misc.Stdlib.String.escaped_c value in
+  Printf.fprintf outchan "%s * %s = %s;\n" typ name value
+
 (* Output a bytecode executable as a C file *)
 
 let link_bytecode_as_c tolink outfile with_main =
@@ -653,6 +657,8 @@ static char caml_sections[] = {
        (* The table of primitives *)
        Symtable.output_primitive_table outchan;
        (* The entry point *)
+       List.iter (emit_global_constant outchan "char_os")
+                 !Clflags.global_string_constants;
        if with_main then begin
          output_string outchan {|
 int main_os(int argc, char_os **argv)
@@ -776,9 +782,10 @@ let link objfiles output_name =
   Clflags.all_ccopts := !lib_ccopts @ !Clflags.all_ccopts;
                                                    (* put user's opts first *)
   Clflags.dllibs := !lib_dllibs @ !Clflags.dllibs; (* put user's DLLs first *)
-  if not !Clflags.custom_runtime then
+  if not !Clflags.custom_runtime then begin
+    assert (!Clflags.global_string_constants = []);
     link_bytecode tolink output_name true
-  else if not !Clflags.output_c_object then begin
+  end else if not !Clflags.output_c_object then begin
     let bytecode_name = Filename.temp_file "camlcode" "" in
     let prim_name =
       if !Clflags.keep_camlprimc_file then
@@ -791,6 +798,7 @@ let link objfiles output_name =
           if not !Clflags.keep_camlprimc_file then remove_file prim_name)
       (fun () ->
          link_bytecode ~final_name:output_name tolink bytecode_name false;
+         let typ = if Sys.win32 then "wchar_t" else "char" in
          let poc = open_out prim_name in
          (* note: builds will not be reproducible if the C code contains macros
             such as __FILE__. *)
@@ -804,6 +812,8 @@ extern "C" {
 
 |};
          Symtable.output_primitive_table poc;
+         List.iter (emit_global_constant poc typ)
+                   !Clflags.global_string_constants;
          output_string poc {|
 #ifdef __cplusplus
 }
